Fixing Scrollbar Style

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -377,6 +377,10 @@ input:focus {
     overflow-y: auto;
     position: relative;
     background: var(--background);
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.4) var(--container-background);
+    scrollbar-gutter: stable always;
+    position: relative;
 }
 
 #streakDisplay {
